tests/error/array_errors/assign_mismatch.err
Error: Type mismatch (at $FILE:11:4)
   | 
 9 | def main() -> None:
10 |     a = array(1, 2, 3)
11 |     a[0] = "not an int"
   |     ^^^^ Cannot assign expression of type `str` to array element of
   |          type `int`

Guppy compilation failed due to 1 previous error
